test/compile_errors/err_if_then_removed.w
//! expect-error: expected ':' or '{' to introduce body

fn main:
    let x = 1
    let y = if x > 0 then x else -x
    let _ = y
